[package]
name = "bwst"
version = "0.1.0"
edition = "2024"
links = "blst"
rust-version = "1.92"

[dependencies]
ff = { version = "0.14.0-pre.0", package = "rustcrypto-ff" }
group = { version = "0.14.0-pre.0", package = "rustcrypto-group" }

[build-dependencies]
cc = "1.2"
glob = "0.3"
bindgen = "0.72"
