[package]
name = "bwst"
version = "0.1.0"
edition = "2024"
links = "blst"
rust-version = "1.92"

[features]
default = ["alloc"]
alloc = []

[dependencies]
group = { version = "0.14.0-pre.0", package = "rustcrypto-group" }
subtle = { version = "2.6", default-features = false }
rand_core = "0.10.0-rc-3"

[dev-dependencies]
getrandom = { version = "0.4.0-rc.0", features = ["sys_rng"]}

[build-dependencies]
cc = "1.2"
glob = "0.3.3"
bindgen = "0.72"
